--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="app_name">CoolWeather</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    
+    <string name="blx">～</string>
+    <string name="switchs">□</string>
+    <string name="refresh">◎</string>
+    
 
 </resources>
